# You must change these to your own details.
[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.10", features = ["js"] }
rand = "0.8.5"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["console", "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element"] }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
futures = "0.3.28"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"
wasm-bindgen-test = "0.3.37"

